--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" type="image/png" href="./public/icon.png" />
+    <link rel="icon" type="image/png" href="/icon.png" />
 </head>
 
 <body class="bg-white text-gray-900">
     <!-- Header / Icon -->
     <header class="max-w-4xl mx-auto px-6 py-12 text-center">
-        <img src="./public/icon.png" alt="Dice app icon" class="mx-auto w-24 h-24 rounded-2xl shadow" />
+        <img src="/icon.png" alt="Dice app icon" class="mx-auto w-24 h-24 rounded-2xl shadow" />
         <h1 class="mt-6 text-4xl font-bold">D!ce</h1>
         <p class="mt-2 text-lg text-gray-600">Simple • Colors • Smooth • Satisfying</p>
         <div class="mt-6">
@@ -27,10 +27,10 @@
     <section class="max-w-5xl mx-auto px-6 py-12">
         <h2 class="text-2xl font-bold mb-6 text-center">Screenshots</h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-            <img src="./public/screenshot1.png" alt="Screenshot 1" class="rounded-lg border" />
-            <img src="./public/screenshot2.png" alt="Screenshot 2" class="rounded-lg border" />
-            <img src="./public/screenshot3.png" alt="Screenshot 3" class="rounded-lg border" />
-            <img src="./public/screenshot4.png" alt="Screenshot 4" class="rounded-lg border" />
+            <img src="/screenshot1.png" alt="Screenshot 1" class="rounded-lg border" />
+            <img src="/screenshot2.png" alt="Screenshot 2" class="rounded-lg border" />
+            <img src="/screenshot3.png" alt="Screenshot 3" class="rounded-lg border" />
+            <img src="/screenshot4.png" alt="Screenshot 4" class="rounded-lg border" />
         </div>
     </section>
 
