--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <section class="max-w-5xl mx-auto px-6 py-12">
         <h2 class="text-2xl font-bold mb-6 text-center">Screenshots</h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-            <img src="/screenshot1.png" alt="Screenshot 1" class="rounded-lg border" />
-            <img src="/screenshot2.png" alt="Screenshot 2" class="rounded-lg border" />
-            <img src="/screenshot3.png" alt="Screenshot 3" class="rounded-lg border" />
-            <img src="/screenshot4.png" alt="Screenshot 4" class="rounded-lg border" />
+            <img src="/screenshots/1.png" alt="Screenshot 1" class="rounded-lg border" />
+            <img src="/screenshots/2.png" alt="Screenshot 2" class="rounded-lg border" />
+            <img src="/screenshots/4.png" alt="Screenshot 3" class="rounded-lg border" />
+            <img src="/screenshots/6.png" alt="Screenshot 4" class="rounded-lg border" />
         </div>
     </section>
 
