--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>D!ce</title>
+    <title>Color Dice</title>
     <meta name="description" content="Dice is a simple, clean dice roller app." />
 
     <!-- Tailwind CSS -->
@@ -16,12 +16,14 @@
     <!-- Header / Icon -->
     <header class="max-w-4xl mx-auto px-6 py-12 text-center">
         <img src="/icon.png" alt="Dice app icon" class="mx-auto w-24 h-24 rounded-3xl shadow" />
-        <h1 class="mt-6 text-4xl font-bold">D!ce</h1>
+        <h1 class="mt-6 text-4xl font-bold">Color Dice</h1>
         <p class="mt-2 text-lg text-gray-600">Simple • Colors • Smooth • Satisfying</p>
         <div class="mt-6 flex items-center justify-center gap-4">
-            <a href="#" class="inline-block rounded-lg bg-gray-900 text-white px-6 py-3 font-semibold">
-                Coming Soon on App Store
+            <a href="https://apps.apple.com/in/app/d-ce/id6751885557" target="_blank" rel="noopener noreferrer">
+                <img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83&releaseDate=1726012800&h=4a20a707f9e7f0e8ce9493b"
+                    alt="Download on the App Store" style="height: 50px;" />
             </a>
+
             <a href="#privacy"
                 class="inline-block rounded-lg border border-gray-300 px-6 py-3 font-semibold text-gray-700">
                 Privacy Policy
@@ -63,20 +65,22 @@
         <div id="privacy-content" class="space-y-4 text-sm leading-6 text-gray-800">
 
             <h1>Privacy Policy</h1>
-            <p>Last updated: September 10, 2025</p>
+            <p>Last updated: September 12, 2025</p>
 
-            <p>This privacy policy applies to the D!ce app. We respect your privacy and are committed to protecting it.
+            <p>This privacy policy applies to the Color Dice app. We respect your privacy and are committed to
+                protecting it.
             </p>
 
             <h2>Information We Collect</h2>
-            <p>D!ce does <strong>not collect, store, or share any personal information or usage data</strong>. The app
+            <p>Color Dice does <strong>not collect, store, or share any personal information or usage data</strong>. The
+                app
                 runs entirely on your device and does not transmit data to us or any third party.</p>
 
             <h2>Third-Party Services</h2>
             <p>This app does not use third-party analytics, advertising, or tracking tools.</p>
 
             <h2>Children’s Privacy</h2>
-            <p>D!ce does not collect any personal data from anyone, including children under the age of 13.</p>
+            <p>Color Dice does not collect any personal data from anyone, including children under the age of 13.</p>
 
             <h2>Changes to This Privacy Policy</h2>
             <p>If we make changes in the future (for example, if we add features that require data collection), we will
@@ -94,7 +98,7 @@
     </section>
 
     <footer class="text-center text-gray-500 py-8">
-        © <span id="year"></span> D!ce · <a href="#privacy" class="underline">Privacy Policy</a>
+        © <span id="year"></span> Color Dice · <a href="#privacy" class="underline">Privacy Policy</a>
     </footer>
 
     <script>
