--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
 
     <!-- Screenshots -->
     <section class="max-w-5xl mx-auto px-6 py-12">
-        <h2 class="text-2xl font-bold mb-6 text-center">Screenshots</h2>
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-            <img src="/screenshots/1.png" alt="Screenshot 1" class="rounded-lg border" />
-            <img src="/screenshots/2.png" alt="Screenshot 2" class="rounded-lg border" />
-            <img src="/screenshots/4.png" alt="Screenshot 3" class="rounded-lg border" />
-            <img src="/screenshots/6.png" alt="Screenshot 4" class="rounded-lg border" />
+        <div class="w-full flex flex-col items-center sm:flex-row justify-center gap-8">
+            <img src="/screenshots/01.png" alt="Screenshot 1"
+                class="rounded-lg border w-full sm:w-[300px] object-fit" />
+            <img src="/screenshots/02.png" alt="Screenshot 2"
+                class="rounded-lg border w-full sm:w-[300px] object-fit" />
         </div>
+
+
     </section>
 
     <!-- Support Form -->
